--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 --text:white;
 --accent:#38bdf8;
 --progressbg:#334155;
+--yes:#22c55e;
+--no:#ef4444;
 }
 
 .light{
@@ -26,6 +28,8 @@
 --text:#0f172a;
 --accent:#2563eb;
 --progressbg:#cbd5e1;
+--yes:#16a34a;
+--no:#dc2626;
 }
 
 *{margin:0;padding:0;box-sizing:border-box;font-family:Segoe UI;}
@@ -43,16 +47,23 @@ transition:0.3s;
 
 h1{
 font-size:48px;
-margin-bottom:20px;
+margin-bottom:10px;
 text-align:center;
 cursor:pointer;
 padding:12px 25px;
-border:3px solid var(--accent);
 border-radius:12px;
-transition:0.3s;
+position:relative;
 }
 
-h1:hover{background:var(--accent);color:white;}
+h1::after{
+content:'';
+display:block;
+width:60%;
+height:4px;
+margin:10px auto 0;
+background:linear-gradient(90deg,var(--accent),transparent);
+border-radius:2px;
+}
 
 .toggle{
 margin-bottom:20px;
@@ -82,282 +93,198 @@ background:var(--accent);
 transition:0.4s;
 }
 
-.container{
+.stage{
+position:relative;
+width:100%;
+max-width:800px;
+min-height:300px;
+display:flex;
+align-items:center;
+justify-content:center;
+}
+
+.card{
+position:absolute;
+width:100%;
+padding:30px;
 background:var(--card);
-padding:35px;
 border-radius:20px;
-box-shadow:0 20px 50px rgba(0,0,0,0.5);
-max-width:1000px;
-width:100%;
-animation:fadeIn 1s ease;
+box-shadow:0 15px 50px rgba(0,0,0,0.5);
+transition:0.5s ease, transform 0.5s ease, opacity 0.5s ease;
+opacity:1;
 }
 
-.question{margin-bottom:22px;font-size:18px;}
-
-select{
-width:100%;
-padding:10px;
-border-radius:10px;
-border:none;
-margin-top:8px;
-font-size:15px;
+.card.hidden{
+opacity:0;
+transform:translateY(20px);
+pointer-events:none;
 }
 
-button{
-margin-top:25px;
-padding:14px 30px;
-font-size:18px;
+.q-text{font-size:22px;margin-bottom:25px;}
+.yesno{display:flex;gap:20px;}
+.btn-yn{
+flex:1;
+padding:18px;
 border:none;
 border-radius:12px;
+font-size:16px;
+font-weight:700;
+cursor:pointer;
+transition:0.2s;
+}
+.btn-yes{background:var(--yes); color:white;}
+.btn-no{background:var(--no); color:white;}
+
+.result-container{
+display:none;
+text-align:center;
+margin-top:20px;
+}
+
+.result-container p{
+margin:15px 0;
+font-size:18px;
+white-space:pre-line;
+}
+
+footer{
+margin-top:50px;
+text-align:center;
+font-size:16px;
+opacity:0.8;
+}
+
+.share-btn{
+margin-top:15px;
+padding:10px 18px;
+border-radius:8px;
+border:none;
 cursor:pointer;
 background:var(--accent);
 color:white;
-transition:0.3s;
+font-weight:600;
 }
 
-button:hover{opacity:0.85;}
-
-.result-container{
-margin-top:30px;
-text-align:center;
-display:none;
-}
-
-.result{font-size:20px;font-weight:bold;line-height:1.6;}
-
-#chartContainer{max-width:700px;margin:30px auto;}
-
-footer{margin-top:50px;text-align:center;font-size:16px;opacity:0.8;}
-
-@keyframes fadeIn{
-from{opacity:0;transform:translateY(25px);}
-to{opacity:1;transform:translateY(0);}
+@media (max-width:720px){
+.stage{min-height:400px;}
+.btn-yn{padding:14px;font-size:15px;}
+.q-text{font-size:20px;}
 }
 </style>
-
-<!-- Chart.js CDN -->
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<!-- jsPDF CDN -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-
 </head>
+
 <body>
 
 <h1 onclick="resetTest()">Մասնագիտական կողմնորոշման թեստ</h1>
-
 <button class="toggle" onclick="toggleMode()">Փոխել ռեժիմը</button>
 
 <div class="progress-container">
 <div class="progress" id="progress"></div>
 </div>
 
-<div class="container" id="quizContainer">
+<div class="stage" id="stage"></div>
 
-<!-- 10 հարց -->
-<div class="question">1. Սիրելի առարկա
-<select onchange="updateProgress()" class="q">
-<option value="">Ընտրեք</option>
-<option value="tech">Ինֆորմատիկա</option>
-<option value="tech">Ֆիզիկա</option>
-<option value="tech">Ռոբոտատեխնիկա</option>
-<option value="med">Կենսաբանություն</option>
-<option value="med">Քիմիա</option>
-<option value="art">Գրականություն</option>
-<option value="art">Երաժշտություն</option>
-<option value="biz">Մաթեմատիկա</option>
-<option value="biz">Տնտեսագիտություն</option>
-</select></div>
-
-<div class="question">2. Նախընտրած գործունեություն
-<select onchange="updateProgress()" class="q">
-<option value="">Ընտրեք</option>
-<option value="tech">Ծրագրավորում</option>
-<option value="tech">Խաղերի մշակում</option>
-<option value="med">Մարդկանց բուժում</option>
-<option value="art">Դիզայն</option>
-<option value="biz">Բիզնես կառավարում</option>
-</select></div>
-
-<div class="question">3. Որտեղ կուզենայիք աշխատել
-<select onchange="updateProgress()" class="q">
-<option value="">Ընտրեք</option>
-<option value="tech">IT ընկերությունում</option>
-<option value="med">Հիվանդանոցում</option>
-<option value="art">Ստուդիայում</option>
-<option value="biz">Միջազգային կազմակերպությունում</option>
-</select></div>
-
-<div class="question">4. Ձեր ուժեղ կողմը
-<select onchange="updateProgress()" class="q">
-<option value="">Ընտրեք</option>
-<option value="tech">Վերլուծություն</option>
-<option value="med">Հոգատարություն</option>
-<option value="art">Ստեղծարարություն</option>
-<option value="biz">Առաջնորդություն</option>
-</select></div>
-
-<div class="question">5. Ինչն է ձեզ մոտիվացնում
-<select onchange="updateProgress()" class="q">
-<option value="">Ընտրեք</option>
-<option value="tech">Նոր տեխնոլոգիաներ</option>
-<option value="med">Մարդկանց առողջություն</option>
-<option value="art">Արվեստ</option>
-<option value="biz">Ֆինանսական հաջողություն</option>
-</select></div>
-
-<div class="question">6. Սիրում եք թիմային աշխատանք
-<select onchange="updateProgress()" class="q">
-<option value="">Ընտրեք</option>
-<option value="biz">Այո, ղեկավարել</option>
-<option value="med">Այո, աջակցել</option>
-<option value="tech">Միջին</option>
-<option value="art">Ավելի շատ միայնակ</option>
-</select></div>
-
-<div class="question">7. Նախընտրում եք
-<select onchange="updateProgress()" class="q">
-<option value="">Ընտրեք</option>
-<option value="tech">Տեխնիկա</option>
-<option value="med">Մարդիկ</option>
-<option value="art">Ստեղծագործություն</option>
-<option value="biz">Ֆինանսներ</option>
-</select></div>
-
-<div class="question">8. Ձեր մտածողությունը
-<select onchange="updateProgress()" class="q">
-<option value="">Ընտրեք</option>
-<option value="tech">Լոգիկական</option>
-<option value="med">Էմոցիոնալ</option>
-<option value="art">Ստեղծարար</option>
-<option value="biz">Ռազմավարական</option>
-</select></div>
-
-<div class="question">9. Ո՞ր ոլորտն է հետաքրքիր
-<select onchange="updateProgress()" class="q">
-<option value="">Ընտրեք</option>
-<option value="tech">ԱԲ և ՏՏ</option>
-<option value="med">Բժշկություն</option>
-<option value="art">Արվեստ</option>
-<option value="biz">Բիզնես</option>
-</select></div>
-
-<div class="question">10. Ինչպիսի՞ արդյունք եք ուզում
-<select onchange="updateProgress()" class="q">
-<option value="">Ընտրեք</option>
-<option value="tech">Նորարարություն</option>
-<option value="med">Օգնություն մարդկանց</option>
-<option value="art">Գեղեցիկ ստեղծագործություն</option>
-<option value="biz">Բարձր եկամուտ</option>
-</select></div>
-
-<button onclick="calculate()">Տեսնել արդյունքը</button>
-
-</div>
-
-<!-- Արդյունքի ցուցադրում -->
 <div class="result-container" id="resultContainer">
-<div class="result" id="resultText"></div>
-<div id="chartContainer"><canvas id="resultChart"></canvas></div>
-<button onclick="downloadPDF()">Ապահովել PDF վկայական</button>
-<button onclick="resetTest()">Նոր թեստ</button>
+<p id="resultText"></p>
+<button class="share-btn" onclick="shareResult()">Կիսել արդյունքը</button>
+<button class="share-btn" onclick="resetTest()">Կրկնել թեստը</button>
+<p>Թեստի արդյունքը մոտավոր է և կրում է կրթական բնույթ</p>
 </div>
 
 <footer>
-© 2026  
+<br>© 2026  
 Նախագծային աշխատանք
 </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-
 <script>
-function updateProgress(){
-let selects=document.querySelectorAll(".q");
-let filled=0;
-selects.forEach(s=>{if(s.value!=="") filled++;});
-let percent=(filled/selects.length)*100;
-document.getElementById("progress").style.width=percent+"%";
-}
+const questions=[
+{q:'Դու հաճույքով լուծու՞մ ես տրամաբանական խնդիրներ', map:{IT:2,Engineering:1,Research:1}},
+{q:'Սիրու՞մ ես ստեղծագործել՝ նկարել, դիզայն անել կամ երաժշտությամբ զբաղվել', map:{Art:3,Design:2,Media:1}},
+{q:'Սիրու՞մ ես մարդկանց օգնել և շփվել', map:{Healthcare:3,Teaching:2,SocialWork:1}},
+{q:'Թվերի հետ աշխատելը քեզ դու՞ր է գալիս', map:{Finance:3,DataScience:2,Business:1}},
+{q:'Հաճույք ես ստանում սարքերի ու մեխանիկայի հետ աշխատելիս', map:{Engineering:3,IT:1}},
+{q:'Պատրա՞ստ ես երկար ուսումնառության և հետազոտական աշխատանքի համար', map:{Research:3,Medicine:2}},
+{q:'Կուզե՞ս ղեկավարել մարդկանց և թիմեր', map:{Business:3,Management:2,Teaching:1}},
+{q:'Կուզե՞ս աշխատել լրատվության/մեդիայի ոլորտում', map:{Media:3,Design:1,Business:1}},
+{q:'Ցանկանու՞մ ես սեփական բիզնես սկսել', map:{Business:3,Finance:1}},
+{q:'Սիրու՞մ ես դրսում ակտիվ աշխատանքներ կատարել', map:{Agriculture:3,Engineering:1}}
+];
 
-function calculate(){
-let selects=document.querySelectorAll(".q");
-let count={tech:0,med:0,art:0,biz:0};
-for(let s of selects){
-if(s.value===""){alert("Խնդրում ենք պատասխանել բոլոր հարցերին."); return;}
-count[s.value]++;
-}
-
-// Top professions
-let resultsText={
-tech:"Ձեզ համապատասխանում են՝ Ծրագրավորող, ԱԲ ինժեներ, Տվյալագետ, Կիբերանվտանգության մասնագետ, Ռոբոտաշինության ինժեներ։",
-med:"Ձեզ համապատասխանում են՝ Բժիշկ, Հոգեբան, Դեղագործ, Լաբորանտ, Ֆիզիոթերապևտ։",
-art:"Ձեզ համապատասխանում են՝ Դիզայներ, Գրող, Նկարիչ, Երաժիշտ, Լրագրող։",
-biz:"Ձեզ համապատասխանում են՝ Մենեջեր, Տնտեսագետ, Ֆինանսիստ, Մարքեթոլոգ, Իրավաբան։"
+const careers={
+IT:'ՏՏ / Ծրագրավորում',Engineering:'Ինժեներա-տեխնիկա',Design:'Դիզայն',Art:'Արվեստ',Media:'Մեդիա/Մարքեթինգ',
+Healthcare:'Առողջապահություն',Teaching:'Ուսուցում',Finance:'Ֆինանսներ',DataScience:'Տվյալագիտություն',
+Research:'Հետազոտություն',Business:'Բիզնես / Մենեջմենթ',Agriculture:'Գյուղատնտեսություն',Management:'Մենեջմենթ',SocialWork:'Սոցիալական աշխատանք',Medicine:'Բժշկություն'
 };
 
-let maxCount=Math.max(...Object.values(count));
-let topCategory=Object.keys(count).find(k=>count[k]===maxCount);
-document.getElementById("resultText").innerText=resultsText[topCategory];
+let state={scores:{}};
+Object.keys(careers).forEach(k=> state.scores[k]=0);
 
-// Hide quiz, show results
-document.getElementById("quizContainer").style.display="none";
-document.getElementById("resultContainer").style.display="block";
+const stage=document.getElementById('stage');
 
-// Render chart
-renderChart(count);
+function createCard(i){
+const data=questions[i];
+const card=document.createElement('div');
+card.className='card'+(i>0?' hidden':'');
+card.innerHTML=`
+<div class="q-text">${data.q}</div>
+<div class="yesno">
+<button class="btn-yn btn-yes">Այո</button>
+<button class="btn-yn btn-no">Ոչ</button>
+</div>
+<div style="margin-top:15px; font-size:13px; color:var(--text);">Հարց ${i+1}/${questions.length}</div>
+`;
+card.querySelector('.btn-yes').onclick=()=>answer(i,true);
+card.querySelector('.btn-no').onclick=()=>answer(i,false);
+return card;
 }
 
-let chartInstance;
-function renderChart(data){
-const ctx=document.getElementById("resultChart").getContext("2d");
-if(chartInstance) chartInstance.destroy();
-chartInstance=new Chart(ctx,{
-type:'bar',
-data:{
-labels:["Տեխնիկա","Բժշկություն","Արվեստ","Բիզնես"],
-datasets:[{
-label:"Մուտքագրված պատասխաններ",
-data:[data.tech,data.med,data.art,data.biz],
-backgroundColor:["#0ea5e9","#22c55e","#facc15","#f97316"]
-}]
-},
-options:{
-responsive:true,
-plugins:{
-legend:{display:false},
-title:{display:true,text:"Ձեր արդյունքների բաշխում"}
-},
-scales:{
-y:{beginAtZero:true,precision:0,stepSize:1}
-}
-}
-});
+function render(){
+stage.innerHTML='';
+for(let i=0;i<questions.length;i++) stage.appendChild(createCard(i));
 }
 
-// PDF export
-function downloadPDF(){
-const { jsPDF } = window.jspdf;
-const doc=new jsPDF();
-doc.setFontSize(20);
-doc.text("Մասնագիտական կողմնորոշման թեստ",20,20);
-doc.setFontSize(16);
-doc.text(document.getElementById("resultText").innerText,20,40);
-doc.save("Certificate.pdf");
+function answer(i,yes){
+if(yes){for(const k in questions[i].map) state.scores[k]+=questions[i].map[k];}
+if(i+1<questions.length) showCard(i+1); else showResults();
+}
+
+function showCard(i){
+document.querySelectorAll('.card').forEach(c=>c.classList.add('hidden'));
+stage.children[i].classList.remove('hidden');
+let percent=((i+1)/questions.length)*100;
+document.getElementById('progress').style.width=percent+'%';
+}
+
+function showResults(){
+let arr=Object.entries(state.scores).map(([k,v])=>({k,v,name:careers[k]}));
+arr.sort((a,b)=>b.v-a.v);
+let top=arr.slice(0,3);
+let text='Ձեր ամենահամապատասխան մասնագիտությունները՝\n';
+top.forEach((t,i)=>{text+=`${i+1}. ${t.name}\n`;});
+document.getElementById('resultText').innerText=text;
+stage.style.display='none';
+document.getElementById('resultContainer').style.display='block';
 }
 
 function resetTest(){
-document.querySelectorAll(".q").forEach(s=>s.value="");
-document.getElementById("resultText").innerText="";
-document.getElementById("progress").style.width="0%";
-document.getElementById("quizContainer").style.display="block";
-document.getElementById("resultContainer").style.display="none";
-if(chartInstance) chartInstance.destroy();
-window.scrollTo({top:0,behavior:"smooth"});
+state={scores:{}};
+Object.keys(careers).forEach(k=> state.scores[k]=0);
+render();
+showCard(0);
+stage.style.display='flex';
+document.getElementById('resultContainer').style.display='none';
+document.getElementById('progress').style.width='0%';
+window.scrollTo({top:0,behavior:'smooth'});
 }
 
-function toggleMode(){
-document.body.classList.toggle("light");
+function toggleMode(){document.body.classList.toggle('light');}
+
+function shareResult(){
+const text=document.getElementById('resultText').innerText;
+navigator.clipboard.writeText(text).then(()=>alert('Արդյունքը պատճենվեց clipboard–ում, կարող եք կիսել:'));
 }
+
+render();
 </script>
 
 </body>
